--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "dev-link-website",
+  "name": "devlink",
   "version": "1.0.0",
-  "description": "Connecting non profits with developers",
+  "description": "A place for non profits to find developers",
   "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Trevor Malloy",
   "license": "MIT",
@@ -18,8 +19,8 @@
     "concurrently": "^3.5.1",
     "express": "^4.16.3",
     "gravatar": "^1.6.0",
-    "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.0.15",
+    "jsonwebtoken": "^8.2.0",
+    "mongoose": "^5.0.12",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "validator": "^9.4.1"
